<resources>
    <string name="app_name">ElectroMan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_create_account">Create account</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_successful">Login successful. You\'ll now get your work orders list.</string>
    <string name="prompt_login_username">User Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_date_of_birth">Date of Birth</string>
    <string name="prompt_municipality">Municipality</string>
    <string name="prompt_postal_code">Postal Code</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_house_number">House Number</string>
    <string name="prompt_box">Box</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="prompt_register_username">User Name</string>
    <string name="prompt_register_password">Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_work_order_overview">Work Order Overview</string>
    <string name="menu_login">Login</string>
    <string name="menu_create_account">Create Account</string>
    <string name="action_new_work_order">New</string>
    <string name="prompt_new_work_order_city">City</string>
    <string name="prompt_new_work_order_device">Device</string>
    <string name="prompt_new_work_order_problem_code">Problem Code</string>
    <string name="prompt_new_work_order_customer_name">Customer Name</string>

    <string name="menu_action_save">V Save</string>
    <string name="menu_action_cancel">X Cancel</string>
    <string name="detailed_problem_description_title">Detailed problem description</string>
    <string name="repair_information_title">Repair information (text is scrollable)</string>
    <string name="repair_information_title_editable">Repair information</string>
    <string name="hint_repair_information">Please enter here your repair information...</string>
    <string name="repair_information_save_error">Not Saved. No repair information was entered!</string>
    <string name="menu_action_reopen">Reopen</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu_logout">Logout</string>
    <string name="action_logout">Logout</string>
    <string name="username_exists_already">Username exists already!</string>
    <string name="username_and_password_cannot_be_blank">Username and password cannot be blank!</string>
    <string name="terms_and_conditions_need_to_be_checked">The terms and conditions have to be checked!</string>
    <string name="prompt_new_work_order_problem_description">Problem Description</string>
    <string name="terms_and_conditions">I agree to the terms and conditions</string>
    <string name="header_city">City</string>
    <string name="header_device">Device</string>
    <string name="header_problem_code">Problem Code</string>
    <string name="customer_name">Name</string>
    <string name="header_processed">Processed</string>
</resources>