<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:id="@+id/create_account_scroll_view"
    tools:context=".activities.ui.account.CreateAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_first_name"
            android:hint="@string/prompt_first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/last_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_last_name"
            android:hint="@string/prompt_last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/date_of_birth"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_date_of_birth"
            android:hint="@string/prompt_date_of_birth"
            android:inputType="date"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/municipality"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/last_name"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/municipality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_municipality"
            android:hint="@string/prompt_municipality"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/postal_code"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/date_of_birth"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/postal_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_postal_code"
            android:hint="@string/prompt_postal_code"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/street"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/municipality"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_street"
            android:hint="@string/prompt_street"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/house_number"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/postal_code"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/house_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_house_number"
            android:hint="@string/prompt_house_number"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/register_username"
            app:layout_constraintEnd_toStartOf="@+id/box"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/street"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_box"
            android:hint="@string/prompt_box"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/register_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/house_number"
            app:layout_constraintTop_toBottomOf="@+id/street"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_register_username"
            android:hint="@string/prompt_register_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/register_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/house_number"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/prompt_register_password"
            android:hint="@string/prompt_register_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/create_account2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/register_username"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/create_account2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:enabled="true"
            android:text="@string/action_create_account"
            app:layout_constraintBottom_toTopOf="@id/create_account_error_message"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/register_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/create_account_error_message"
            style="@style/RedWarningText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username_exists_already"
            app:layout_constraintTop_toBottomOf="@id/create_account2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>