<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repair_detail_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.home.RepairDetailFragment">

    <TextView
        android:id="@+id/detailed_problem_description_title"
        style="@style/h1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/detailed_problem_description_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/detailed_problem_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_problem_description_title" />


    <TextView
        android:id="@+id/repair_information_title"
        style="@style/h1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/repair_information_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_problem_description" />

        <EditText
            android:id="@+id/repair_information"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintHeight_max="wrap"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:gravity="top|left"
            android:hint="@string/repair_information_title"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="15"
            android:minLines="5"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/repair_information_title"
            app:layout_constraintBottom_toTopOf="@id/repair_information_save_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repair_information_title"/>



        <TextView
            android:id="@+id/repair_information_readonly"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintHeight_max="wrap"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:gravity="top|left"
            android:text=""
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/repair_information_save_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repair_information_title"/>



    <TextView
        android:id="@+id/repair_information_save_error"
        style="@style/RedWarningText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/repair_information_save_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repair_information_readonly" />


</androidx.constraintlayout.widget.ConstraintLayout>